# Systems-Programming-Project

./: MD_guide.md  Makefile  PROJECT_NOTES.md  README.md  Test  assembler  dbg.as  decode_to_int_array.c  decode_to_int_array.h  decode_to_string_array.c  decode_to_string_array.h  decoding.c  decoding.h  ex1.am  ex1.as  ex1.ext  ex1.ob  ex2.am  ex2.as  ex2.ent  ex2.ext  ex2.ob  ex3.ent  ex3.ob  ex_input.am  ex_input.as  exec  file_util.c  file_util.h  gen1.as  gen2.txt  help_table.c  help_table.h  label_table.c  label_table.h  macro.c  macro.h  macro_table.c  macro_table.h  main.c  (+36 more)
header_files/: asm_error.h  assembler.h  binary.h  codegen.h  common.h  data_structs.h  decode_to_int_array.h  decode_to_string_array.h  decoding.h  ds.h  encode_int.h  encode_string.h  encoding.h  error.h  file_util.h  instruction.h  keyword.h  label.h  label_table.h  lexer.h  macro.h  parser.h  pre_assembler.h  symbol_table.h  symbols.h  text_tools.h  text_util.h  util.h  utilities.h
input/: ex1.as  ex2.as  ex3.as  ex4.as  ex5.as  ex6.as  gen1.as  gen2.as  invalid1.as  invalid5.as  invalid6.as
output/: binary_ex1.am  binary_ex3.am  binary_gen1.am  binary_gen2.am  ex1.am  ex1.ext  ex1.ob  ex2.am  ex3.ext  ex3.ob  ex4.am  ex5.am  gen1.am  gen1.ob  gen2.ent  gen2.ob  valid1.ob  valid2.ext
pre_assembler/: pre_assembler.h
source_files/: asm_error.c  assembler.c  binary.c  codegen.c  data_structs.c  decode_to_int_array.c  decode_to_string_array.c  decoding.c  encode_int.c  encode_string.c  encoding.c  file_util.c  instruction.c  keyword.c  label.c  lexer.c  macro.c  main.c  output_files.c  (+7 more)
(+19 files in other folders)
